# tempfs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
ex/: e1.rs  e2.rs  e3.rs
src/: error.rs  global_consts.rs  helpers.rs  lib.rs  temp_dir.rs  temp_file.rs  virt_fs.rs
tests/: tests.rs
