[package]
name = "tempfs"
version = "0.12.11"
edition = "2021"
authors = ["barely-a-dev <nahman1234lol12@gmail.com>"]
description = "A lightweight Rust crate for managing temporary files and directories with automatic cleanup."
license = "MIT OR Apache-2.0"
repository = "https://github.com/barely-a-dev/tempfs"
homepage = "https://github.com/barely-a-dev/tempfs"
documentation = "https://docs.rs/tempfs"
readme = "README.md"
keywords = ["temporary", "files", "directories"]
categories = ["filesystem"]

[features]
rand_gen = ["dep:rand", "dep:once_cell"]
mmap_support = ["dep:memmap2"]
regex_support = ["dep:regex"]
virt_fs = []
display_files = ["dep:sew"]
full = ["rand_gen", "mmap_support", "regex_support", "virt_fs"]
full_nightly = ["full", "display_files"]

[[example]]
name = "e1"
path = "ex/e1.rs"

[[example]]
name = "e2"
path = "ex/e2.rs"

[[example]]
name = "e3"
path = "ex/e3.rs"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
memmap2 = { version = "0.9.5", optional = true }
once_cell = { version = "1.20.3", optional = true }
rand = { version = "0.9.0", optional = true }
regex = { version = "1.11.1", optional = true }
sew = { version = "0.6.6", optional = true }
